--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -3,6 +3,9 @@ services:
 
   backend:
     image: doccano/doccano:backend
+    build:
+        context: ../
+        dockerfile: ./docker/Dockerfile.prod
     volumes:
       - static_volume:/backend/staticfiles
       - media:/backend/media
@@ -68,6 +71,9 @@ services:
 
   nginx:
     image: doccano/doccano:frontend
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile.nginx
     command: >
       /bin/sh -c
       "envsubst '
